Comply with Poggit Submitting Rules

--- a/plugin.yml
+++ b/plugin.yml
@@ -5,9 +5,9 @@ version: "3.0"
 api: 5.0.0
 authors:
   - David
-description: Lootbox
+description: A lootbox plugin that let's you create as many type of lootboxes as you want with 5 animation choices.
 
 permissions:
-  lootbox.give:
+  lootbox.command.give:
     default: op
     description: Allows you to give lootboxes to players
